--- a/index.html
+++ b/index.html
@@ -1,79 +1,67 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Oscar's Personal Site</title>
-  </head>
-  <body>
-    <table cellspacing="20">
-      <tbody>
-        <tr>
-          <td><img src="Images/Oscar's photo-modified.png" alt="Oscar's photo"/></td>
-          <td><h1>Oscar Gonzalez</h1>
-          <p><em>Fouder and CEO of <strong>the app UrWeb and UrLogo</strong>.</em></p>
-          <p>I am a web apps Developer. I love learn new thinks.</p></td>
-        </tr>
-      </tbody>
-    </table>
-    <hr size="3" noshade/>
-    <h3>Education</h3>
-    <ul>
-      <li><a href="http://www.uttn.edu.mx/" target="_blank">UTT University</a></li>
-      <li><a href="https://www.conalep.edu.mx/pagina-de-inicio" target="_blank">Conalep High School</a></li>
-      <li><a href="https://www.facebook.com/Tecnica10Lazaro/" target="_blank">No.10 Thechnical School</a></li>
-    </ul>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Oscar Gonzalez</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon-cv.png?v=2">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<div class="top_container">
+  <img class="top-cloud"src="images/cloud.png" alt="cloud-image">
+  <h1>I'm Oscar</h1>
+  <h2>a web designer</h2>
+  <img class="bottom-cloud"src="images/cloud.png" alt="cloud-image">
+  <img class="mountain"src="images/Mountain.png" alt="mountain-image">
+</div>
+
+<div class="middle-container">
+  <div class="profile">
+    <img class="oscar-img" src="images/Oscar's photo.png" alt="Oscar-photo">
+    <h2>Hello.</h2>
+    <p><em>Fouder and CEO of <strong>the app UrWeb and UrLogo</strong>.</em></p>
+    <p>I am a web apps Developer. I love learn new thinks.</p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="web-design-img" src="images/web-design.png" alt="web-design-img">
+      <h3>Develop what you need.</h3>
+      <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
+    </div>
+    <div class="skill-row">
+      <img class="design-img" src="images/design-thinking.png" alt="design-img">
+      <h3>Design what you want.</h3>
+      <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>I can help.</h2>
     <br>
-    <hr/>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>Apps Developer</li>
-      <li>Webs Developer</li>
-      <li>Video Games Player</li>
-    </ol>
-    <hr/>
-    <h3>Work Experience</h3>
-    <table cellspacing="20">
-      <thead>
-        <tr>
-          <th>Year</th>
-          <th>Company</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2020 - Now</td>
-          <td>CORNING Company <br> Sr. Process technician</td>
-        </tr>
-        <tr>
-          <td>2018 - 2020</td>
-          <td>JHONSON CONTROLS <br> NPI & Process Technician</td>
-        </tr>
-        <tr>
-          <td>2017 - 2018</td>
-          <td>VALEO ELECTRONIC SYSRTEM <br> Mantenance Technician</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr/>
-    <h3>Skills</h3>
-    <table cellspacing="20">
-      <tbody>
-        <tr>
-          <td>Logo Designer</td>
-          <td>★★★★★</td>
-          <td>Window Apps Development</td>
-          <td>★★★★☆</td>
-        </tr>
-        <tr>
-          <td>Web Development</td>
-          <td>★★★★☆</td>
-          <td>English lenguage</td>
-          <td>★★★☆☆</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr size="3" noshade/>
-    <h3><a href="HTML Inputs.html">Type Inputs</a></h3>
-    <h3><a href="Contact Me.html">Contact Me!</a></h3>
-  </body>
+    <h3>I’m currently available for freelance work.</h3>
+    <br>
+    <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+
+    <div class="button-margin">
+      <a class="button" href="mailto:oscar.gonzalez101099@gmail.com">✉ CONTACT ME</a>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/oscar-gonz%C3%A1lez-cortez-235b8a1a6/?originalSubdomain=mx">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copy-right">© Oscar Gonzalez <br> All rights are reserved.</p>
+</div>
+
+</body>
 </html>
